--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="promotions.html">Deals</a></li>
                     <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                    <a href="#" id="close"><i class="far fa-times"></i></a>
                 </ul>
             </div>
         </section>
