--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 <img src="img/authors/rob.png" alt="">
                 <div class="author">
                     <h4>Rob Clappis</h4>
-                    <p>JavaScript Director</p>
+                    <p>Database Architect</p>
                 </div>
                 <span class="contact">
                     <p>Mobile: +61 04</p>
