shop now button

--- a/homePage.html
+++ b/homePage.html
@@ -32,7 +32,7 @@
             <h2>Super Value Deal</h2>
             <h1>On all second-hand items</h1>
             <p>Save the planet and your money!</p>
-            <button>Shop now</button>
+            <a href="shop.html"><button>Shop now</button></a>
         </section>
 
         <section id="feature" class="section-p1">
