--- a/homePage.html
+++ b/homePage.html
@@ -323,7 +323,7 @@
             </div>
         </footer>
 
-        <script src="script.js"></script>
+        <script src="homePage.js"></script>
     </body>
     
 </html>
