--- a/shop.html
+++ b/shop.html
@@ -203,7 +203,7 @@
             </div>
         </footer>
 
-        <script src="script.js"></script>
+        <script src="shop.js"></script>
     </body>
     
 </html>
