--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
                     <li><a class="active" href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="promotions.html">Deals</a></li>
+                    <li><a href="signUp.html">Sign Up</a></li>
                     <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
                     <a href="#" id="close"><i class="far fa-times"></i></a>
                 </ul>
