--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a class="active" href="contact.html">Contact</a></li>
                     <li><a href="promotions.html">Deals</a></li>
+                    <li><a href="signUp.html">Sign Up</a></li>
                     <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
                 </ul>
             </div>
