--- a/signUp.html
+++ b/signUp.html
@@ -10,6 +10,30 @@
     </head>
 
     <body>
+
+        <section id="header"> 
+            <a href="#"><img src="img/logo.png" class="logo" alt="" width="150" height="auto"></a>
+
+            <div>
+                <ul id="navbar">
+                    <li><a class="active" href="homePage.html">Home</a></li>
+                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="promotions.html">Deals</a></li>
+                    <li><a href="signUp.html">Sign Up</a></li>
+                    <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="hero"
+
+        <div class="container">
+            <input type="text" autocomplete="off" id="name" placeholder="name">
+            <input type="email" autocomplete="off" id="email" placeholder="email">
+            <input type="password" autocomplete="off" id="password" placeholder="password">
+        </div>
         
     </body>
 </html>
