--- a/signUp.html
+++ b/signUp.html
@@ -29,11 +29,12 @@
 
         <section id="hero"
 
-        <div class="container">
-            <input type="text" autocomplete="off" id="name" placeholder="name">
-            <input type="email" autocomplete="off" id="email" placeholder="email">
-            <input type="password" autocomplete="off" id="password" placeholder="password">
-        </div>
+            <div>
+                <input type="text" autocomplete="off" id="name" placeholder="name">
+                <input type="email" autocomplete="off" id="email" placeholder="email">
+                <input type="password" autocomplete="off" id="password" placeholder="password">
+                <button class="submit-btn">Create Account</button>
+            </div>
         
     </body>
 </html>
