--- a/signUp.html
+++ b/signUp.html
@@ -35,6 +35,6 @@
                 <input type="password" autocomplete="off" id="password" placeholder="password">
                 <button class="submit-btn">Create Account</button>
             </div>
-        
+        <script src="form.js"></script>
     </body>
 </html>
