--- a/cart.html
+++ b/cart.html
@@ -48,16 +48,16 @@
                     <tr>
                         <td><i class="far fa-times-circle"></i><a href="#"></a></td>
                         <td><img src="img/products/p1.jpg" alt=""></td>
-                        <td>Product Name</td>
-                        <td>$price</td>
+                        <td>Brooks Glycerin 19</td>
+                        <td>$180.00</td>
                         <td><input type="number" value="1"></td>
                         <td></td>
                     </tr>
                     <tr>
                         <td><i class="far fa-times-circle"></i><a href="#"></a></td>
                         <td><img src="img/products/p2.jpg" alt=""></td>
-                        <td>Product Name</td>
-                        <td>$price</td>
+                        <td>FZ6r Lams Approved</td>
+                        <td>$6,000.00</td>
                         <td><input type="number" value="1"></td>
                         <td></td>
                     </tr>
@@ -78,7 +78,7 @@
                 <table>
                     <tr>
                         <td>Cart Subtotal</td>
-                        <td>$335</td>
+                        <td>$6,180.00</td>
                     </tr>
                     <tr>
                         <td>Shipping</td>
@@ -86,7 +86,7 @@
                     </tr>
                     <tr>
                         <td><strong>Total</strong></td>
-                        <td><strong>$335</strong></td>
+                        <td><strong>$6,180.00</strong></td>
                     </tr>
                 </table>
                 <button class="normal">Proceed to Checkout</button>
